# enozunu

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  enozunu.kdl  enozunu.lock.json  install.sh  reportage.kdl
.devcontainer/: devcontainer-lock.json  devcontainer.json
.enozunu/: provenance.json
.github/workflows/: artifacts.manifest.json  check.yml  release.yml
.rellog/: config.kdl
.rellog/entries/: 20260724T042452.392766544Z.json  20260724T042452.395032109Z.json
.rellog/release-notes/: 0.0.0.md  0.0.1.md  0.1.0.md  0.1.1.md
.reportage/: .gitignore
docs/: README.md  generated-output.md  manifest.md  philosophy.md  v0.0.x-goal.md  why-or-why-not.md
docs/adr/: 20260708T075713Z_implement-enozunu-in-rust.md  20260708T104200Z_position-enozunu-as-configuration-materializer.md  20260708T104202Z_no-source-origin-validation.md  20260708T104204Z_kdl-for-human-json-for-machine.md  20260709T070553Z_source-reference-blocks-and-local-sources.md
docs/design/: README.md  philosophy.md  v0.0.x-goal.md  v0.1.x-goal.md
docs/guide/: README.md  generated-output.md  manifest.md  support.md  why-or-why-not.md
e2e/: init.repor  summon.repor  summon_codex.repor  summon_gist.repor  summon_git_selectors.repor  summon_lockfile.repor  validate.repor  validate_missing_manifest.stderr
just/: check.just  coverage.just  release.just
scripts/: get-version.sh
src/: diagnostics.rs  gist.rs  git.rs  init.rs  lib.rs  lock.rs  main.rs  manifest.rs  materialize.rs  plan.rs  provenance.rs
tests/: gist_pipeline.rs  git_resolver.rs  pipeline.rs
(+14 files in other folders)
