[package]
name = "enozunu"
version = "0.0.1"
edition = "2024"
description = "Cross-provider configuration materializer for AI agent tooling"
license = "Apache-2.0"
repository = "https://github.com/tooppoo/enozunu"

[dependencies]
clap = { version = "4", features = ["derive"] }
kdl = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
